--- a/Client/index.html
+++ b/Client/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>art-gallery</title>
-</head>
-<body>
-  <h1>Art Gallery</h1>
+<html ng-app="artGallery">
+  <head>
+    <meta charset="utf-8" />
+    <title>art-gallery</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+  </head>
+  <body>
+    <h1>Art Gallery</h1>
 
-  <script src="client/app.js"></script>
-</body>
+    <div ng-view></div>
+
+    <script src="client/app.js"></script>
+  </body>
 </html>
