Fix Static Files

--- a/Client/index.html
+++ b/Client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="artGallery">
+<html ng-app="gallery">
   <head>
     <meta charset="utf-8" />
     <title>art-gallery</title>
@@ -10,6 +10,10 @@
 
     <div ng-view></div>
 
-    <script src="client/app.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-route/angular-route.js"></script>
+
+    <script src="app/home/home.js"></script>
+    <script src="app/app.js"></script>
   </body>
 </html>
