--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -8,7 +8,7 @@
 
 </div>
 
-<h2 class="title">Main Gallery</h2>
+<h2>Main Gallery</h2>
 
 <div class="image" ng-repeat="image in images">
   <img src="{{ image.url }}" alt="">
