--- a/Client/index.html
+++ b/Client/index.html
@@ -14,6 +14,8 @@
     <script src="lib/angular-route/angular-route.js"></script>
 
     <script src="app/home/home.js"></script>
+    <script src="app/post/post.js"></script>
+    <script src="app/services/services.js"></script>
     <script src="app/app.js"></script>
   </body>
 </html>
